# log-sup_forge

./: .gitignore  COMPARISON.md  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/flowforge/: __init__.py
backend/flowforge/agents/: diagnosis.py  llm.py  planner.py  scheduler.py  verifier.py  watcher.py
backend/flowforge/api/: app.py
backend/flowforge/connectors/logistics/: __init__.py  brightdata.py  connector.py  countries.py  generator.py  live.py  news.py
backend/flowforge/connectors/manufacturing/: __init__.py  connector.py
backend/flowforge/contracts/: __init__.py  audit.py  disruption.py  enums.py  events.py  execution.py  pipeline.py  plan.py  trust.py  verification.py
backend/flowforge/core/: __init__.py  config.py  engine.py  gate.py  orchestrator.py  registry.py
backend/flowforge/eval/: eval_connector.py  harness.py  scenarios.py
backend/flowforge/execution/: __init__.py  audit.py  executor.py  gate.py
backend/flowforge/interfaces/: __init__.py  agent.py  connector.py  executor.py
backend/flowforge/solver/: Simulate.py  __init__.py  network.py  optimizer.py  schedule.py  simulate.py
backend/scripts/: demo.py
backend/tests/: test_contracts.py  test_live.py
flowforge/agents/: diagnosis.py  watcher.py
flowforge/analysis/: impact.py  severity.py
flowforge/data/: generator.py  injector.py  schemas.py
flowforge/evaluation/: evaluation_runner.py  metrics.py  scenarios.py
frontend/: .gitignore  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js
tests/: test_p2.py
(+20 files in other folders)
